--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "validator": "^13.9.0",
+    "xss-clean": "^0.1.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "@types/express": "^4.17.15",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/validator": "^13.7.13",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
